# mabsr

./: CMakeLists.txt
BSplines/: CMakeLists.txt
BSplines/include/MABSR/: BSplines.h
BSplines/src/: BSplines.cc
test/: CMakeLists.txt
test/BSplines/: CMakeLists.txt
test/BSplines/src/: test_bsplines_curves.cc  test_bsplines_surfaces.cc
