SET(BSPLINES_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/BSplines/include)
SET(BSPLINES_INCLUDE ${BSPLINES_INCLUDE_DIR}/MABSR/BSplines.h)
SET(BSPLINES_SRC src/BSplines.cc)
SET(BSPLINES_FILES ${BSPLINES_INCLUDE} ${BSPLINES_SRC})

INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} 
	${BSPLINES_INCLUDE_DIR})

IF(MABSR_SHARED_LIBS)
	ADD_LIBRARY(bsplines SHARED ${BSPLINES_FILES})
	SET_TARGET_PROPERTIES(bsplines 
							PROPERTIES 
								OUTPUT_NAME "bsplines" 
								CLEAN_DIRECT_OUTPUT 1 
								VERSION MABSR_VERSION)
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(bsplines 
								PROPERTIES 
									ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib"
									COMPILE_FLAGS "-DLIBBSPLINES_BUILD -DLIBBSPLINES_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	INSTALL(TARGETS bsplines
			RUNTIME DESTINATION bin  #.dll
			LIBRARY DESTINATION lib  #.so
			ARCHIVE DESTINATION lib) #.lib
ELSE(MABSR_SHARED_LIBS)
	ADD_LIBRARY(bsplines_static STATIC ${BSPLINES_FILES})
	SET_TARGET_PROPERTIES(bsplines_static 
							PROPERTIES 
								OUTPUT_NAME "bsplines" 
								CLEAN_DIRECT_OUTPUT 1 
								VERSION MABSR_VERSION)
	IF(CMAKE_HOST_WIN32)
		INSTALL(TARGETS bsplines_static ARCHIVE DESTINATION libstatic) #.lib
	ELSE(CMAKE_HOST_WIN32)
		INSTALL(TARGETS bsplines_static ARCHIVE DESTINATION lib)       #.so
	ENDIF(CMAKE_HOST_WIN32)	
ENDIF(MABSR_SHARED_LIBS)

INSTALL(DIRECTORY ${BSPLINES_INCLUDE_DIR}/ DESTINATION include)