SET(BSPLINES_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/BSplines/include)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} 
	${VTK_USE_FILE}
	${BSPLINES_INCLUDE_DIR})

IF(MABSR_SHARED_LIBS)
	ADD_EXECUTABLE(test_bsplines_curves src/test_bsplines_curves.cc)
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(test_bsplines_curves PROPERTIES COMPILE_FLAGS "-DLIBBSPLINES_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	ADD_DEPENDENCIES(test_bsplines_curves bsplines)
	LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
	TARGET_LINK_LIBRARIES(test_bsplines_curves bsplines ${VTK_LIBRARIES})
	INSTALL(TARGETS test_bsplines_curves RUNTIME DESTINATION bin)
ELSE(MABSR_SHARED_LIBS)
	ADD_EXECUTABLE(test_bsplines_curves_s src/test_bsplines_curves.cc)
	ADD_DEPENDENCIES(test_bsplines_curves_s bsplines_static)
	IF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/libstatic)
	ELSEIF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
	ENDIF(CMAKE_HOST_WIN32)
	TARGET_LINK_LIBRARIES(test_bsplines_curves_s bsplines_static vtkHybrid vtkWidgets)
	INSTALL(TARGETS test_bsplines_curves_s RUNTIME DESTINATION bin)
ENDIF(MABSR_SHARED_LIBS)

IF(MABSR_SHARED_LIBS)
	ADD_EXECUTABLE(test_bsplines_surfaces src/test_bsplines_surfaces.cc)
	IF(CMAKE_HOST_WIN32)
		SET_TARGET_PROPERTIES(test_bsplines_surfaces PROPERTIES COMPILE_FLAGS "-DLIBBSPLINES_DYNAMIC")
	ENDIF(CMAKE_HOST_WIN32)
	ADD_DEPENDENCIES(test_bsplines_surfaces bsplines)
	LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
	TARGET_LINK_LIBRARIES(test_bsplines_surfaces bsplines ${VTK_LIBRARIES})
	INSTALL(TARGETS test_bsplines_surfaces RUNTIME DESTINATION bin)
ELSE(MABSR_SHARED_LIBS)
	ADD_EXECUTABLE(test_bsplines_surfaces_s src/test_bsplines_surfaces.cc)
	ADD_DEPENDENCIES(test_bsplines_surfaces_s bsplines_static)
	IF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/libstatic)
	ELSEIF(CMAKE_HOST_WIN32)
		LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
	ENDIF(CMAKE_HOST_WIN32)
	TARGET_LINK_LIBRARIES(test_bsplines_surfaces_s bsplines_static vtkHybrid vtkWidgets)
	INSTALL(TARGETS test_bsplines_surfaces_s RUNTIME DESTINATION bin)
ENDIF(MABSR_SHARED_LIBS)

